# docs/swagger/swagger.yaml
@@ -281,6 +281,20 @@ paths:
     get:
       description: Returns owned orders or every order for an administrator or support
         user.
+      parameters:
+      - default: 20
+        description: Maximum number of orders
+        in: query
+        maximum: 100
+        minimum: 1
+        name: limit
+        type: integer
+      - default: 0
+        description: Number of orders to skip
+        in: query
+        minimum: 0
+        name: offset
+        type: integer
       produces:
       - application/json
       responses:
@@ -290,6 +304,10 @@ paths:
             items:
               $ref: '#/definitions/dto.OrderResponse'
             type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httpresponse.ErrorResponse'
         "401":
           description: Unauthorized
           schema:
